--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Social</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    <h1>Hello word</h1>
+    <main>
+        <section id="telefone">
+            <iframe src="pag-home.html" name="tela" id="tela" width="170px"; height="302px";></iframe>
+        </section>
+        <section id="redes">
+            <a href="pag-home.html" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a><br>
+            <a href="pag-youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="youtube"></a><br>
+            <a href="pag-github.html" target="tela"><img src="imagens/logo-github.jpg" alt="github"></a><br>
+            <a href="pag-insta.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="instagram"></a><br>
+            <a href="pag-x.html" target="tela"><img src="imagens/logo-twitter.jpg" alt="twiter"></a><br>
+            <a href="pag-face.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="facebook"></a>
+        </section>
+    </main>
 </body>
 </html>
