consertando os links

--- a/pag-face.html
+++ b/pag-face.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <img src="imagens/tela-facebook.jpg" alt="tela facebook">
-    <a href="facebook.com/cursosemvideo" target="_blank">Acesse</a>
+    <a href="https://facebook.com/cursosemvideo" target="_blank">Acesse</a>
 </body>
 </html>
