--- a/pag-insta.html
+++ b/pag-insta.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <img src="imagens/tela-instagram.jpg" alt="tela instagram">
-    <a href="instagram.com/cursoemvideo" target="_blank">Acesse</a>
+    <a href="https://www.instagram.com/cursoemvideo/" target="_blank">Acesse</a>
 </body>
 </html>
