--- a/pag-x.html
+++ b/pag-x.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <img src="imagens/tela-twitter.jpg" alt="tela twitter">
-    <a href="twitter.com/cursosemvideo" target="_blank">Acesse</a>
+    <a href="https://twitter.com/cursosemvideo" target="_blank">Acesse</a>
 </body>
 </html>
